--- a/src/components/FontEditor/FontEditor.css
+++ b/src/components/FontEditor/FontEditor.css
@@ -1,30 +1,33 @@
 @font-face {
-  font-family: 'Minipax';
-  src: url('../../assets/fonts/minipax.ttf') format('truetype');
+  font-family: "Minipax";
+  src: url("../../assets/fonts/minipax.ttf") format("truetype");
 }
 @font-face {
-  font-family: 'Urbanist';
-  src: url('../../assets/fonts/urbanist.ttf') format('truetype');
+  font-family: "Urbanist";
+  src: url("../../assets/fonts/urbanist.ttf") format("truetype");
 }
 @font-face {
-  font-family: 'Imbue';
-  src: url('../../assets/fonts/imbue.ttf') format('truetype');
+  font-family: "Imbue";
+  src: url("../../assets/fonts/imbue.ttf") format("truetype");
 }
 @font-face {
-  font-family: 'Anybody';
-  src: url('../../assets/fonts/anybody.ttf') format('truetype');
+  font-family: "Anybody";
+  src: url("../../assets/fonts/anybody.ttf") format("truetype");
 }
 
 #font-editor {
-    background-color:linen;
-    font-family: Anybody;
-    /* height:90vh; */
-    flex-grow: 1;
-    text-align: center;
-    overflow-x:hidden;
+  background-color: rgb(43, 43, 43);
+  font-family: Anybody;
+  flex-grow: 1;
+  text-align: center;
+  overflow-x: hidden;
 }
-
 p {
-  font-size:100px;
-  width:100%;
+  font-size: 100px;
+  width: 100%;
+  margin:auto;
+  color:rgb(212, 212, 212);
+}
+p:focus {
+  outline:none;
 }
